--- a/pylighter/loader.html
+++ b/pylighter/loader.html
@@ -125,13 +125,13 @@
         }
     }
 </style>
-<div class="parent">
-    <div class="marker">
-        <div class="marker-ink"></div>
-        <div class="marker-start top-start"></div>
-        <div class="marker-start shadow-start"></div>
-        <div class="marker-end"></div>
-    </div>
-    <div class="pylighter-text text-3d"><span></span></div>
-    <div class="text-3d highlight"></div>
-</div>
+<!--<div class="parent">-->
+<!--    <div class="marker">-->
+<!--        <div class="marker-ink"></div>-->
+<!--        <div class="marker-start top-start"></div>-->
+<!--        <div class="marker-start shadow-start"></div>-->
+<!--        <div class="marker-end"></div>-->
+<!--    </div>-->
+<!--    <div class="pylighter-text text-3d"><span></span></div>-->
+<!--    <div class="text-3d highlight"></div>-->
+<!--</div>-->
